<resources>
    <string name="app_name">口碑创客</string>
    <string name="exit_tip">再按一次退出程序</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_shopping">商城</string>
    <string name="main_tab_payroll">工资条</string>
    <string name="main_tab_bill">账单</string>
    <string name="main_tab_me">我的</string>
    <string name="home_tv_withdraw">提现</string>
    <string name="home_tv_get_amount">领取额度</string>
    <string name="home_tv_add">今日增加 +</string>
    <string name="home_tv_add_amount">100.00</string>
    <string name="home_tv_my_amount">2,000.00</string>
    <string name="home_tv_money_flag">¥</string>
    <string name="home_tv_my">我的额度</string>
    <string name="home_tab_5">更多</string>
    <string name="home_tab_4">话费充值</string>
    <string name="home_tab_3">美团</string>
    <string name="home_tab_2">京东</string>
    <string name="home_tan_1">打卡</string>
    <string name="login_tip_phone">请输入手机号</string>
    <string name="login_tip_sms">请输入验证码</string>
    <string name="login_tv_sms">获取验证码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_tip_phone_regex">请输入正确的手机号</string>
    <string name="login_tip_sms_rest">重新发送</string>
    <string name="login_tip_sms_tip">验证码已发送</string>
    <string name="login_txt_agree">我已阅读同意遵守</string>
    <string name="login_txt_agree_protocol">《用户注册须知》</string>
    <string name="dialog_tv_login_agree">请阅读并同意遵守《用户注册须知》</string>
    <string name="dialog_btn_login_agree">已阅读并同意</string>
    <string name="dialog_update_version_name">发现新版本</string>
    <string name="dialog_version_btn_txt">立即更新</string>
</resources>
